<resources>
    <!--Application Name-->
    <string name="app_name">SejarahKita</string>
    <string name="app_version">© 2021 SejarahKita - v1.0</string>

    <!--BottomNavigationView Menu-->
    <string name="game">Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>

    <!--LoginFragment.java-->
    <string name="title_login">Selamat Datang Kembali 😁</string>
    <string name="caption_login">Isi form dulu yaa untuk bermain</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="belum">Belum punya akun?</string>
    <string name="go_to_register">Register</string>

    <!--RegisterFragment.java-->
    <string name="title_register">Halo 👋</string>
    <string name="caption_register">Daftar akun dulu yuk</string>
    <string name="cpass">Confirm Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="school">School</string>
    <string name="city">City</string>
    <string name="birthyear">Birthyear</string>
    <string name="sudah">Sudah punya akun?</string>
    <string name="go_to_login">Login</string>

    <!--ProfileFragment.java-->
    <string name="logout">Logout</string>
    <string name="playing_history">Playing History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>